--- a/frontend/src/components/Hero/Hero.css
+++ b/frontend/src/components/Hero/Hero.css
@@ -5,14 +5,16 @@
 }
 
 .hero {
-  /* position: relative; */
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: 50rem;
-  /* background-color: antiquewhite; */
+  display: flex;
+  flex-direction: column;
   gap: 9.6rem;
   align-items: center;
   padding-block: 6rem;
+}
+
+.hero .hero-box {
+  display: flex;
+  gap: 9.6rem;
 }
 
 .hero-heading {
@@ -74,4 +76,40 @@
   border-radius: 0.5rem;
   -webkit-box-shadow: 5px 5px 1px 0px #269a50;
   box-shadow: 5px 5px 1px 0px #269a50;
+}
+
+@media only screen and (max-width: 1000px) {
+  .hero .plant-species {
+    width: 80%;
+    position: unset;
+    display: flex;
+    flex-direction: column;
+    justify-self: center;
+    transform: none;
+  }
+
+  .hero .hero-box {
+    gap: 2rem;
+  }
+}
+
+@media only screen and (max-width: 770px) {
+  .hero .plant-species {
+    width: 90%;
+    position: unset;
+    display: flex;
+    flex-direction: column;
+    justify-self: center;
+    transform: none;
+  }
+
+  .hero .hero-box {
+    flex-direction: column-reverse;
+    gap: 2rem;
+  }
+
+  .hero-image-box {
+    align-self: center;
+    width: 80%;
+  }
 }
